Scrollbar on smaller screen fixed

--- a/RazorClassLibrary/Pages/Blogs.razor.css
+++ b/RazorClassLibrary/Pages/Blogs.razor.css
@@ -30,7 +30,7 @@ body, html {
 
 .featured-blogs {
     background-color: #fcfcf8;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
@@ -231,6 +231,7 @@ body, html {
     .btn {
         margin-top: 4% !important;
     }
+
 }
 
 @media screen and (max-width: 1175px) {
